--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -9,6 +9,12 @@
   -webkit-text-size-adjust: 100%;
 }
 
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   display: flex;
